<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="username_field">Username</string>
    <string name="fullname">Fullname</string>
    <string name="birth_date">Birth date</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="send">Send</string>
    <string name="top_text">Fine choice!</string>
</resources>
