<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.anisutina.android.registrationform.Registration">

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="InvalidId">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name"
            android:hint="@string/fullname"
            android:maxLength="30"
            android:paddingTop="40dp"
            android:ellipsize="middle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/birth"

            android:clickable="true"
            android:hint="@string/birth_date"
            android:elegantTextHeight="false"
            android:paddingTop="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/email_address"
            android:paddingTop="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            android:hint="@string/username_field"
            android:paddingTop="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password"
            android:paddingTop="40dp" />

        <Button
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:text="@string/send"
            android:id="@+id/button"
            android:layout_gravity="right" />

    </LinearLayout>

</RelativeLayout>
